加入产商代码

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,3 +3,9 @@ httpport = 8080
 runmode = dev
 copyrequestbody = true
 mongodbhost = 127.0.0.1
+#Agent模式
+agentmode = false
+#顺舟接入端口
+shunzhouport = 7077
+#xiXun接入端口
+xixunport = 7078
