--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,7 +3,8 @@ httpport = 8080
 runmode = dev
 copyrequestbody = true
 #Agent模式
-agentmode = false
+agentmode = true
+agent_server_ip = 127.0.0.1:8080
 #顺舟接入端口
 shunzhouport = 7077
 #xiXun接入端口
