--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,7 +5,7 @@ copyrequestbody = true
 #Agent模式
 agentmode = true
 agent_server_ip = 127.0.0.1:8080
-agent_sn = agent-201910200001
+agent_sn = AGENT201910200001
 #顺舟接入端口
 shunzhouport = 7077
 #xiXun接入端口
