--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,11 +2,6 @@ appname = go-iot
 httpport = 8080
 runmode = dev
 copyrequestbody = true
-#Agent模式
-agentmode = true
-agent_server_ip = 47.100.252.121:18080
-agent_sn = AGENT201910200001
-#顺舟接入端口
-shunzhouport = 7077
-#xiXun接入端口
-xixunport = 7078
+
+# db-dataSourceName=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local
+db-dataSourceName=root:root@tcp(192.168.31.136:3306)/go-iot?charset=utf8&loc=Local
