--- a/mqtt-assemblyscript-sdk/package.json
+++ b/mqtt-assemblyscript-sdk/package.json
@@ -5,13 +5,15 @@
   "main": "easegress/index.ts",
   "scripts": {
     "test": "node tests",
+    "asbuild:test": "asc examples/flashsale/test.ts --target test --explicitStart",
     "asbuild:flashsale": "asc examples/flashsale/index.ts --target release --use abort=",
     "asbuild": "npm run asbuild:flashsale"
   },
   "author": "megaease",
   "license": "Apache-2.0",
   "dependencies": {
-    "@assemblyscript/loader": "^0.19.7"
+    "@assemblyscript/loader": "^0.19.7",
+    "assemblyscript-json": "^1.1.0"
   },
   "devDependencies": {
     "assemblyscript": "^0.19.7"
