--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,4 +4,4 @@ runmode = dev
 copyrequestbody = true
 
 # db-dataSourceName=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local
-db-dataSourceName=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
+db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
