--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,6 +2,7 @@ appname = go-iot
 httpport = 8080
 runmode = dev
 copyrequestbody = true
+autorender = false
 
 # db-dataSourceName=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local
 db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
