--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,5 +4,6 @@ runmode = dev
 copyrequestbody = true
 autorender = false
 
+logs.level=debug
 # db-dataSourceName=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local
 db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
