--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,3 +7,7 @@ autorender = false
 logs.level=debug
 # db-dataSourceName=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local
 db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
+
+es.url=http://localhost:9200
+es.usename=
+es.password=
