--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,10 +4,20 @@ runmode = dev
 copyrequestbody = true
 autorender = false
 
+# debug, info, warn, error
 logs.level=debug
-# db-dataSourceName=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local
+
+# database  url
 db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
 
+# es config
 es.url=http://localhost:9200
 es.usename=
 es.password=
+# redis config
+resis.addr=127.0.0.1:6379
+redis.db=0
+redis.password=
+
+# db mem redis
+device.manager.id=redis
