--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,7 +15,7 @@ es.url=http://localhost:9200
 es.usename=
 es.password=
 # redis config
-resis.addr=127.0.0.1:6379
+redis.addr=192.168.31.197:6379
 redis.db=0
 redis.password=
 
