--- a/conf/app.conf
+++ b/conf/app.conf
@@ -14,6 +14,8 @@ db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
 es.url=http://localhost:9200
 es.usename=
 es.password=
+es.buffersize=10000
+es.bulksize=6000
 # redis config
 redis.addr=localhost:6379
 redis.db=0
