--- a/conf/app.conf
+++ b/conf/app.conf
@@ -16,6 +16,7 @@ es.usename=
 es.password=
 es.buffersize=10000
 es.bulksize=6000
+es.warntime=1000
 # redis config
 redis.addr=localhost:6379
 redis.db=0
