delete NetClientType, user NetType

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,17 +8,17 @@ autorender = false
 logs.level=debug
 
 # database  url
-db.url=root:root@tcp(192.168.31.197:3306)/go-iot?charset=utf8&loc=Local&tls=false
+db.url=root:root@tcp(localhost:3306)/go-iot?charset=utf8&loc=Local&tls=false
 
 # es config
-es.url=http://192.168.31.197:9200
+es.url=http://localhost:9200
 es.usename=
 es.password=
 es.buffersize=10000
 es.bulksize=6000
 es.warntime=1000
 # redis config
-redis.addr=192.168.31.197:6379
+redis.addr=localhost:6379
 redis.db=0
 redis.password=
 
