--- a/conf/app.conf
+++ b/conf/app.conf
@@ -24,3 +24,8 @@ redis.password=
 
 # db mem redis
 device.manager.id=redis
+
+cluster.enabled=false
+cluster.name=default
+cluster.url=localhost:8080
+cluster.hosts=localhost:8080,localhost:8081
