--- a/conf/app.conf
+++ b/conf/app.conf
@@ -22,10 +22,7 @@ redis.addr=localhost:6379
 redis.db=0
 redis.password=
 
-# db mem redis
-device.manager.id=redis
-
 cluster.enabled=false
-cluster.name=default
+cluster.name=node1
 cluster.url=localhost:8080
 cluster.hosts=localhost:8080,localhost:8081
