--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,12 +17,17 @@ es.password=
 es.buffersize=10000
 es.bulksize=6000
 es.warntime=1000
+es.numberOfShards=1
+es.numberOfReplicas=0
 # redis config
 redis.addr=localhost:6379
 redis.db=0
 redis.password=
 
+# 集群配置
 cluster.enabled=false
 cluster.name=node1
+cluster.index=1
+cluster.token=abc
 cluster.url=localhost:8080
 cluster.hosts=localhost:8080,localhost:8081
