--- a/conf/app.conf
+++ b/conf/app.conf
@@ -25,9 +25,9 @@ redis.db=0
 redis.password=
 
 # 集群配置
-cluster.enabled=false
+cluster.enabled=true
 cluster.name=node1
 cluster.index=1
 cluster.token=abc
-cluster.url=localhost:8080
-cluster.hosts=localhost:8080,localhost:8081
+cluster.url=http://192.168.31.221:8080
+cluster.hosts=http://192.168.31.221:8080,http://192.168.31.136:8080
