--- a/conf/app.conf
+++ b/conf/app.conf
@@ -25,7 +25,7 @@ redis.db=0
 redis.password=
 
 # 集群配置
-cluster.enabled=true
+cluster.enabled=false
 cluster.name=node1
 cluster.index=1
 cluster.token=abc
