1. 目录调整, 2. goiot日志使用zap

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,6 +6,8 @@ autorender = false
 
 # debug, info, warn, error
 logs.level=debug
+# logs.format=json
+# logs.filename=go-iot.log
 
 # es config
 es.url=http://localhost:9200
