session添加过期时间

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = go-iot
-httpport = 8080
+httpport = 8088
 runmode = dev
 copyrequestbody = true
 autorender = false
@@ -7,7 +7,7 @@ autorender = false
 # debug, info, warn, error
 logs.level=debug
 # logs.format=json
-# logs.filename=go-iot.log
+# logs.filename=logs/go-iot.log
 
 # es config
 es.url=http://localhost:9200
